Initial commit: added build.yml and changed pom.xml